bars overflow fixed on overview screen.
overflow:hidden added into related class.

--- a/frontend/express/public/stylesheets/main.css
+++ b/frontend/express/public/stylesheets/main.css
@@ -1579,6 +1579,7 @@ input.custom-styled-green-check:checked {border-color: #C2C2C2;}
   position: relative;
   background: #ECECEC;
   border-radius: 2px;
+  overflow: hidden;
 }
 
 /*
